--- a/texto.tex
+++ b/texto.tex
@@ -17,6 +17,9 @@
 \usepackage[section]{placeins}
 %\usepackage{fancyhdr} % para cabeçalhos mais elaborados
 \usepackage{subfig}
+\usepackage{amsthm}
+
+\newtheorem{pruning_obs}{Observation}
 
 \fvset{fontsize=\scriptsize}
 
